--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,8 +6,8 @@ repo_url: https://github.com/CodeCompasss/code_campus_userguide
 
 theme:
   name: material
-  logo: assets/logo.png
-  favicon: images/favicon.png
+  logo: images/logo.png
+  favicon: images/favicon.ico
 
   features:
     - navigation.instant
